# CLraytracer

./: CMakeLists.txt  FindGLFW.cmake  FindOpenCL.cmake  README  main.cpp  matrix.cpp  matrix.h  objects.h  objectsCL.h  rayTracer.cl  renderer.cpp  renderer.h  scene.h
cl/: plane.h  sphere.h
